- Stat caps now total 225 points. If for some reaspon they don't, the highest stat is increased to make the 225 total. This is applied after setting your caps again.- Implemented a Complementary Skill capped at 90. The list of choices is determined by the three primary skills chosen. - Wrestling now has higher damage at higher skill levels. The difference is considerable, but not so much as to render weapons pointless. - When equipped with a bow, if your target gets to melee range, you will now attack with Wrestling, but at the bow's attack speed. If it causes any problems, I will revert this change. - When choosing a tradeskill, only valid tradeskills are displayed now (wonder why this hadn't been done before!) - the stonecrafting config file had the gargish stone chest and gargish stone leggings names swapped. Fixed.

--- a/099/pkg/combat/weapons/itemdesc.cfg
+++ b/099/pkg/combat/weapons/itemdesc.cfg
@@ -988,6 +988,7 @@ Weapon 0x13B2
 	MissSound			0x239
 	HitSound			0x3a3
 	MaxHP			120
+	MinRange			0
 	VendorSellsFor		40
 	VendorBuysFor		22
 	blockcircle		1
@@ -1013,6 +1014,7 @@ Weapon 0x0f4f
 	HitSound			0x235
 	MissSound			0x239
 	MaxHP			120
+	MinRange			0
 	VendorSellsFor		80
 	VendorBuysFor		27
 	blockcircle		1
@@ -1038,6 +1040,7 @@ Weapon 0x13fd
 	HitSound			0x235
 	MissSound			0x239
 	MaxHP			120
+	MinRange			0
 	VendorSellsFor		100
 	VendorBuysFor		33
 	blockcircle		1
@@ -1066,6 +1069,7 @@ Weapon 0x16050
 	MissSound			0x239
 	HitSound			0x235
 	MaxHP			100
+	MinRange			0
 	VendorSellsFor		1200
 	blockcircle		1
 	TwoHanded			1
@@ -1364,6 +1368,7 @@ Weapon 0x26c2
 	MissSound			0x239
 	HitSound			0x235
 	MaxHP			150
+	MinRange			0
 	VendorSellsFor		90
 	VendorBuysFor		30
 	blockcircle		1
@@ -1389,6 +1394,7 @@ Weapon 0x26c3
 	HitSound			0x2b2
 	MissSound			0x239
 	MaxHP			150
+	MinRange			0
 	VendorSellsFor		100
 	VendorBuysFor		33
 	blockcircle		1
@@ -1649,6 +1655,7 @@ Weapon 0x27f0
 	MissSound			0x239
 	HitSound			0x235
 	MaxHP			150
+	MinRange			0
 	VendorSellsFor		120
 	VendorBuysFor		40
 	blockcircle		1
@@ -1970,6 +1977,7 @@ Weapon 0x2d2a
 	MissSound			0x239
 	HitSound			0x235
 	MaxHP			150
+	MinRange			0
 	VendorSellsFor		150
 	VendorBuysFor		50
 	blockcircle		1
@@ -1996,6 +2004,7 @@ Weapon 0x2d2b
 	MissSound			0x239
 	HitSound			0x235
 	MaxHP			150
+	MinRange			0
 	VendorSellsFor		135
 	VendorBuysFor		45
 	blockcircle		1
