--- a/trunk/099/pkg/dundee/itemdesc.cfg
+++ b/trunk/099/pkg/dundee/itemdesc.cfg
@@ -4,7 +4,9 @@ Container 0x17057
 	Desc				trash barrel
 	Gump				0x003E
 	Graphic			0x0E77
-	script			trash
+	ControlScript		trashcontrol
+	OnInsertScript		oninsert_trash
+	OnRemoveScript		onremove_trash
 	Color			1154
 	MinX				40
 	MaxX				60
