- Some adjustments to scripts that search the whole realm for something so they scan them with the new size. - Trash barrels can now be opened to check their contents, and automatically clear themselves 5 minutes after the last movement. - Added context menus for guards, henchmen and trash barrels. - Context menus now support items. - Merchants now have the Advancing Skills context menu option. - The Jeweler can now train players in skills. The problem was a typo. - Item Tooltips now display when an item is for a specific character race, and when any character race can use it. - Townguards' pet search now searches the realm the guard is in.

--- a/099/pkg/dundee/itemdesc.cfg
+++ b/099/pkg/dundee/itemdesc.cfg
@@ -4,7 +4,9 @@ Container 0x17057
 	Desc				trash barrel
 	Gump				0x003E
 	Graphic			0x0E77
-	script			trash
+	ControlScript		trashcontrol
+	OnInsertScript		oninsert_trash
+	OnRemoveScript		onremove_trash
 	Color			1154
 	MinX				40
 	MaxX				60
