- Added the new runebooks. - Fixed the itemnames.cfg for alchemy book. A few entries in there were using the old objtypes. - Updated the recall runes to use a struct instead of four separate properties. Also tried to update most scripts that use recall runes. - Smelting script now handles tamed fire beetles like a forge. You have to be the beetle's master for this to work.

--- a/099/pkg/items/books/itemdesc.cfg
+++ b/099/pkg/items/books/itemdesc.cfg
@@ -1,13 +1,13 @@
-Item 0x16100
-{
-	Graphic		0x22c5
-	Name			runebook
-	Desc			Runebook
-	Script		runebook
-	newbie		1
-	VendorSellsFor	200
+//Item 0x16100
+//{
+//	Graphic		0x22c5
+//	Name			runebook
+//	Desc			Runebook
+//	Script		runebook
+//	newbie		1
+//	VendorSellsFor	200
 //	OldObjtype 0x6100
-}
+//}
 
 Item 0x0ff0
 {
