--- a/099/config/itemdesc.cfg
+++ b/099/config/itemdesc.cfg
@@ -95,25 +95,25 @@ Item 0x14F2
 //  Magic items and reagents
 ///////////////////
 
-Item 0x1F14
-{
-	Name			recallrune
-	Script			rune
-	VendorSellsFor		100
-	VendorBuysFor		1
-	RequiresAttention	0
-	Weight			1/5
-}
+//Item 0x1F14
+//{
+//	Name			recallrune
+//	Script			rune
+//	VendorSellsFor		100
+//	VendorBuysFor		1
+//	RequiresAttention	0
+//	Weight			1/5
+//}
 
-Item 0x1F15
-{
-	Name			recallrune2
-	Script			rune
-	VendorSellsFor		100
-	VendorBuysFor		1
-	RequiresAttention	0
-	Weight			1/5
-}
+//Item 0x1F15
+//{
+//	Name			recallrune2
+//	Script			rune
+//	VendorSellsFor		100
+//	VendorBuysFor		1
+//	RequiresAttention	0
+//	Weight			1/5
+//}
 
 Item 0x0E24
 {
