--- a/trunk/099/pkg/items/books/itemdesc.cfg
+++ b/trunk/099/pkg/items/books/itemdesc.cfg
@@ -1,13 +1,13 @@
-Item 0x16100
-{
-	Graphic		0x22c5
-	Name			runebook
-	Desc			Runebook
-	Script		runebook
-	newbie		1
-	VendorSellsFor	200
+//Item 0x16100
+//{
+//	Graphic		0x22c5
+//	Name			runebook
+//	Desc			Runebook
+//	Script		runebook
+//	newbie		1
+//	VendorSellsFor	200
 //	OldObjtype 0x6100
-}
+//}
 
 Item 0x0ff0
 {
