--- a/trunk/099/pkg/magic/runebook/config/icp.cfg
+++ b/trunk/099/pkg/magic/runebook/config/icp.cfg
@@ -10,8 +10,8 @@ ICP Register
 	Creator		MuadDib
 	C_Email		muaddib@lostsoulsshard.org
 
-	Maintainer	*Edwards
-	M_Email		Edwards@FantasiaShard.com
+	Maintainer		Agata
+	M_Email		natalia_buenota@hotmail.com
 
 	// Script	cmdlevel	path
 }
