- Changed the recall rune colors for Britannia and Tokuno. - Runebook charges are no longer shown in the name, but a tooltip. - Updated the tooltips to include the number of runes and charges in a Runebook. - Updated runebook package info.

--- a/099/pkg/magic/runebook/config/icp.cfg
+++ b/099/pkg/magic/runebook/config/icp.cfg
@@ -10,8 +10,8 @@ ICP Register
 	Creator		MuadDib
 	C_Email		muaddib@lostsoulsshard.org
 
-	Maintainer	*Edwards
-	M_Email		Edwards@FantasiaShard.com
+	Maintainer		Agata
+	M_Email		natalia_buenota@hotmail.com
 
 	// Script	cmdlevel	path
 }
