--- a/099/pkg/magic/runebook/pkg.cfg
+++ b/099/pkg/magic/runebook/pkg.cfg
@@ -3,6 +3,6 @@
 #
 Enabled		1
 Name		runebook
-Maintainer	*Edwards
-Email		Edwards@FantasiaShard.com
+Maintainer	Agata
+Email		natalia_buenota@hotmail.com
 Version		1.0
