- Order and Chaos guards now wear the AoS Winged Helmets - Increased the stat gain odds a little. - Death robes can now be sold and also made into bandages. - Corrected a small error where npcs with Poisoning skill weren't raising said skill when fighting. The defender was raising the skill instead! - Changed the animation for Frost ammunition in the Archery script. - Implemented the HeavyCritical multiplier. The melee combat script now uses this property to increase the critical hit chance and damage. Currently I set it to all Heavy two handed weapons. - Corrected the Mounted animation entries for Paladin Sword and Tetsubo. There might be other weapons with such errors. - Removed Syslog messages from trash barrel scripts. - Added some more craftables to the Woodworking and Stonecrafting menus. - Added the Gargish Candelabra to the lighting package. - The Runebooks had no price. Fixed. - Magic weapons and armor now explicitly show their AR and Damage bonus in the tooltips. - Now treasure chests that require lockpicking to open don't show their item count in the tooltips until opened. - Fixed an error where weapons and armor sold by town merchants would have a random quality, effectively making them overpowered. This error has been there since the 095 scripts. It is weird! - Discordance and Provocation scripts now display an appropriate message while requesting a target. - Potions now check for the drinker's alchemy skill and raise their effect accordingly. - Added the Winged Helmet and Paladin Sword to the Blacksmithy menu. - Some cosmetic changes to the crafting gumps. - Elven spinning wheels now work with the tailoring scripts. - Fixed a Line of Sight check issue in the Detect Hidden script. - Lowered the difficulty of the Healing checks for players. - Removed a check that would screw up player deaths while within a certain rectangle in Moonglow. - Migrated the Alchemy skill to the New Crafting System.

--- a/099/config/equip.cfg
+++ b/099/config/equip.cfg
@@ -602,7 +602,7 @@ Equipment TownGuard
 
 Equipment OrderGuard
 {
-	Equip	plateHelm
+	Equip	WingedHelmet
 	Equip	PlatemailBreastplate
 	Equip	PlatemailArms
 	Equip	PlatemailLegs
@@ -614,7 +614,7 @@ Equipment OrderGuard
 
 Equipment ChaosGuard
 {
-	Equip	plateHelm
+	Equip	WingedHelmet
 	Equip	PlatemailBreastplate
 	Equip	PlatemailArms
 	Equip	PlatemailLegs
