--- a/099/pkg/combat/armor/itemdesc.cfg
+++ b/099/pkg/combat/armor/itemdesc.cfg
@@ -1253,6 +1253,7 @@ Armor 0x204E
 	Coverage		Head
 	Coverage		Neck
 	VendorSellsFor	77
+	VendorBuysFor	26
 	maxhp		100
 	script		:combat:equipitem
 	equipscript	:combat:item_equip
