--- a/099/pkg/combat/weapons/itemdesc.cfg
+++ b/099/pkg/combat/weapons/itemdesc.cfg
@@ -441,6 +441,7 @@ Weapon 0x13b9
 	VendorBuysFor	80
 	blockcircle	1
 	TwoHanded		1
+	HeavyCritical	1
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 	hitscript		:weapons:mainhit
@@ -463,6 +464,7 @@ Weapon 0xcdb9
 	MountedAnim	0x1A
 	blockcircle	1
 	TwoHanded		1
+	HeavyCritical	1
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 	hitscript		:weapons:mainhit
@@ -484,6 +486,7 @@ Weapon 0x0f49
 	VendorBuysFor	80
 	blockcircle	1
 	TwoHanded		1
+	HeavyCritical	1
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 	hitscript		:weapons:mainhit
@@ -505,6 +508,7 @@ Weapon 0x0f4b
 	VendorBuysFor	80
 	blockcircle	1
 	TwoHanded		1
+	HeavyCritical	1
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 	hitscript		:weapons:mainhit
@@ -526,6 +530,7 @@ Weapon 0x0f45
 	VendorBuysFor	80
 	blockcircle	1
 	TwoHanded		1
+	HeavyCritical	1
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 	hitscript		:weapons:mainhit
@@ -547,6 +552,7 @@ Weapon 0x13fa
 	VendorBuysFor	80
 	blockcircle	1
 	TwoHanded		1
+	HeavyCritical	1
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 	hitscript		:weapons:mainhit
@@ -568,6 +574,7 @@ Weapon 0x1442
 	VendorBuysFor	80
 	blockcircle	1
 	TwoHanded		1
+	HeavyCritical	1
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 	hitscript		:weapons:mainhit
@@ -589,6 +596,7 @@ Weapon 0x0f4e
 	VendorBuysFor	80
 	blockcircle	1
 	TwoHanded		1
+	HeavyCritical	1
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 	hitscript		:weapons:mainhit
@@ -899,6 +907,7 @@ Weapon 0x1438
 	VendorSellsFor	200
 	VendorBuysFor	80
 	TwoHanded		1
+	HeavyCritical	1
 	blockcircle	1
 	script		:combat:equipitem
 	equipscript	:combat:item_equip
@@ -920,6 +929,7 @@ Weapon 0x1406
 	VendorSellsFor	200
 	VendorBuysFor	80
 	TwoHanded		1
+	HeavyCritical	1
 	blockcircle	1
 	script		:combat:equipitem
 	equipscript	:combat:item_equip
@@ -940,6 +950,7 @@ Weapon 0x0e85
 	VendorSellsFor	120
 	VendorBuysFor	40
 	TwoHanded		1
+	HeavyCritical	1
 	blockcircle	1
 	script		:combat:equipitem
 	equipscript	:combat:item_equip
@@ -1045,6 +1056,7 @@ Weapon 0x13fd
 	VendorBuysFor		33
 	blockcircle		1
 	TwoHanded			1
+	HeavyCritical		1
 	script			:combat:equipitem
 	equipscript		:combat:item_equip
 	unequipscript		:combat:item_unequip
@@ -1061,7 +1073,7 @@ Weapon 0x16050
 	Damage			4d6+30
 	Attribute			Archery
 	Projectile		1
-	ProjectileType		0x6051
+	ProjectileType		0x16051
 	ProjectileAnim		0x36D4
 	ProjectileSound	0x15F
 	Anim				0x12
@@ -1202,6 +1214,7 @@ Weapon 0x26ba
 	VendorBuysFor	80
 	blockcircle	1
 	TwoHanded		1
+	HeavyCritical		1
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 	hitscript		:weapons:mainhit
@@ -1260,11 +1273,12 @@ Weapon 0x26ce
 	HitSound		0x23C
 	MissSound		0x23A
 	Anim			0xD
-	MountedAnim	0x1D
+	MountedAnim	0x1A
 	VendorSellsFor	200
 	VendorBuysFor	80
 	blockcircle	1
 	TwoHanded		1
+	HeavyCritical		1
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 	hitscript		:weapons:mainhit
@@ -1388,7 +1402,7 @@ Weapon 0x26c3
 	Projectile		1
 	ProjectileType		0x1bfb
 	ProjectileAnim		0x1bfe
-	ProjectileSound	0x2b2
+	ProjectileSound	0x4ca
 	Anim				0x13
 	MountedAnim		0x1C
 	HitSound			0x2b2
@@ -1426,6 +1440,7 @@ Weapon 0x27a2
 	VendorBuysFor	80
 	blockcircle	1
 	TwoHanded		1
+	HeavyCritical		1
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 	hitscript		:weapons:mainhit
@@ -1481,11 +1496,12 @@ Weapon 0x27a6
 	HitSound		0x13C
 	MissSound		0x234
 	Anim			0xC
-	MountedAnim	0x1D
+	MountedAnim	0x1A
 	MaxHP		200
 	VendorSellsFor	200
 	VendorBuysFor	80
 	TwoHanded		1
+	HeavyCritical		1
 	blockcircle	1
 	script		:combat:equipitem
 	equipscript	:combat:item_equip
@@ -1936,6 +1952,7 @@ Weapon 0x2d34
 	VendorBuysFor	80
 	blockcircle	1
 	TwoHanded		1
+	HeavyCritical		1
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 	hitscript		:weapons:mainhit
@@ -2324,6 +2341,7 @@ Weapon 0x4075
 	VendorBuysFor	80
 	blockcircle	1
 	TwoHanded		1
+	HeavyCritical		1
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 	hitscript		:weapons:mainhit
@@ -2389,6 +2407,7 @@ Weapon 0x48b0
 	VendorBuysFor	80
 	blockcircle	1
 	TwoHanded		1
+	HeavyCritical		1
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 	hitscript		:weapons:mainhit
@@ -2411,6 +2430,7 @@ Weapon 0x48b2
 	VendorBuysFor	80
 	blockcircle	1
 	TwoHanded		1
+	HeavyCritical		1
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 	hitscript		:weapons:mainhit
@@ -2433,6 +2453,7 @@ Weapon 0x48b4
 	VendorBuysFor	80
 	blockcircle	1
 	TwoHanded		1
+	HeavyCritical		1
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 	hitscript		:weapons:mainhit
@@ -2564,6 +2585,7 @@ Weapon 0x48c0
 	VendorBuysFor	20
 	blockcircle	1
 	TwoHanded		1
+	HeavyCritical		1
 	script		:combat:equipitem
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
@@ -2608,6 +2630,7 @@ Weapon 0x48c4
 	VendorBuysFor	80
 	blockcircle	1
 	TwoHanded		1
+	HeavyCritical		1
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 	hitscript		:weapons:mainhit
