--- a/099/pkg/items/lighting/itemdesc.cfg
+++ b/099/pkg/items/lighting/itemdesc.cfg
@@ -758,4 +758,14 @@ item 0x24ca
 	RequiresAttention	0
 }
 
+item 0x4039
+{
+	name			gargishcandelabra
+	desc			gargish candelabra
+	script		torch
+	movable		1
+	weight		1
+	RequiresAttention	0
+}
+
 
