--- a/099/pkg/skills/craftingskills/blacksmithy/blacksmithy.cfg
+++ b/099/pkg/skills/craftingskills/blacksmithy/blacksmithy.cfg
@@ -929,6 +929,18 @@ blacksmithy 0X26ce
 	bulk_deed		1
 }
 
+// Armor
+blacksmithy 0x2689
+{ 
+	Name			winged helmet
+	material		40
+	type			metal
+	skill		80
+	time			5
+	hasquality	1
+	bulk_deed		1
+}
+
 
 //////////////
 // Samurai Empire
