--- a/099/pkg/skills/craftingskills/woodworking/config/carpentry.cfg
+++ b/099/pkg/skills/craftingskills/woodworking/config/carpentry.cfg
@@ -1400,6 +1400,17 @@ Element 0x2b73
 }
 
 //furniture
+carpentry 0x2d4a
+{ 
+	Name			a decorative acorn
+	Type			wood
+	material		25
+	skill		80
+	time			3
+	mark			1
+	retain		1
+}
+
 carpentry 0x2ddd
 { 
 	Name			an elven podium
@@ -1418,6 +1429,7 @@ carpentry 0x2de3
 	material		20
 	skill		50
 	time			3
+	retain		1
 	mark			1
 }
 
@@ -1428,6 +1440,17 @@ carpentry 0x2ded
 	material		25
 	skill		70
 	time			4
+	retain		1
+	mark			1
+}
+
+carpentry 0x2df5
+{ 
+	Name			an elven reading chair
+	Type			wood
+	material		25
+	skill		70
+	time			3
 	retain		1
 	mark			1
 }
@@ -1579,6 +1602,39 @@ capentry 0xB030
 	Name			an arcane circle
 	Type			wood
 	material		100
+	skill		90
+	time			6
+	retain		1
+}
+
+capentry 0xB031
+{
+	Name			an arcanist statue
+	preview		0x2d0f
+	Type			wood
+	material		100
+	skill		90
+	time			6
+	retain		1
+}
+
+capentry 0xB032
+{
+	Name			a squirrel statue
+	preview		0x2d11
+	Type			wood
+	material		100
+	skill		90
+	time			6
+	retain		1
+}
+
+capentry 0xB033
+{
+	Name			a warrior statue
+	preview		0x2d13
+	Type			wood
+	material		250
 	skill		90
 	time			6
 	retain		1
