--- a/trunk/099/config/equip.cfg
+++ b/trunk/099/config/equip.cfg
@@ -602,7 +602,7 @@ Equipment TownGuard
 
 Equipment OrderGuard
 {
-	Equip	plateHelm
+	Equip	WingedHelmet
 	Equip	PlatemailBreastplate
 	Equip	PlatemailArms
 	Equip	PlatemailLegs
@@ -614,7 +614,7 @@ Equipment OrderGuard
 
 Equipment ChaosGuard
 {
-	Equip	plateHelm
+	Equip	WingedHelmet
 	Equip	PlatemailBreastplate
 	Equip	PlatemailArms
 	Equip	PlatemailLegs
