--- a/trunk/099/pkg/items/decorations/itemdesc.cfg
+++ b/trunk/099/pkg/items/decorations/itemdesc.cfg
@@ -1491,6 +1491,21 @@ Item 0xa0b0
 // Samurai Empire
 ///////////////////
 
+Item 0x2419
+{
+	Name			towersculpture1
+}
+
+Item 0x241a
+{
+	Name			towersculpture2
+}
+
+Item 0x241b
+{
+	Name			towersculpture3
+}
+
 Item 0x24cb
 {
 	Name			shojiscreen
@@ -1559,22 +1574,6 @@ Item  0xb01d
 	Script		stoneitemdeed
 }
 
-Item  0xb01e
-{
-	Name			SmallGargishBedDeed
-	Desc			small gargish bed deed
-	Graphic		0x14EF
-	Script		stoneitemdeed
-}
-
-Item  0xb01f
-{
-	Name			LargeGargishBedDeed
-	Desc			large gargish bed deed
-	Graphic		0x14EF
-	Script		stoneitemdeed
-}
-
 Item 0xb02f
 {
 	Name			AbbatoirDeed
@@ -1583,17 +1582,14 @@ Item 0xb02f
 	Script		placedeed
 }
 
-Item 0xb030
-{
-	Name			ArcaneCircleDeed
-	Desc			arcane circle deed
-	Graphic		0x14EF
-	Script		placedeed
-}
-
 ////////////////////////
 // Mondain's Legacy
 ////////////////////////
+
+Item 0X2d4a
+{
+	Name			DecorativeAcorn
+}
 
 Item 0X2ddd
 {
@@ -1691,6 +1687,38 @@ Item  0xb02a
 	Script		placedeed
 }
 
+Item 0xb030
+{
+	Name			ArcaneCircleDeed
+	Desc			arcane circle deed
+	Graphic		0x14EF
+	Script		placedeed
+}
+
+Item 0xb031
+{
+	Name			ArcanistStatueDeed
+	Desc			arcanist statue deed
+	Graphic		0x14EF
+	Script		placedeed
+}
+
+Item 0xb032
+{
+	Name			SquirrelStatueDeed
+	Desc			squirrel statue deed
+	Graphic		0x14EF
+	Script		placedeed
+}
+
+Item 0xb033
+{
+	Name			WarriorStatueDeed
+	Desc			warrior statue deed
+	Graphic		0x14EF
+	Script		placedeed
+}
+
 /////////////////////////
 // Stygian Abyss
 /////////////////////////
@@ -1702,12 +1730,64 @@ Item 0X4023
 	Weight		2
 }
 
+Item 0X403a
+{
+	Name			GargishFloorMirror
+	Desc			gargish floor mirror
+	script		rotate
+	Weight		2
+}
+
+Item 0X403d
+{
+	Name			GargishPainting
+	Desc			gargish painting
+	script		rotate
+}
+
+Item 0X403f
+{
+	Name			GargishSculpture
+	Desc			gargish sculpture
+	script		rotate
+	Weight		10
+}
+
 Item 0X4041
 {
 	Name			GargishEndtable
 	Desc			gargish endtable
-	script		rotate
 	Weight		2
+}
+
+Item 0X4042
+{
+	Name			GargishVase
+	Desc			gargish vase
+	script		rotate
+}
+
+Item 0X4044
+{
+	Name			GargishWallMirror
+	Desc			gargish wall mirror
+	script		rotate
+}
+
+Item  0xb01e
+{
+	Name			SmallGargishBedDeed
+	Desc			small gargish bed deed
+	Graphic		0x14EF
+	Script		stoneitemdeed
+}
+
+Item  0xb01f
+{
+	Name			LargeGargishBedDeed
+	Desc			large gargish bed deed
+	Graphic		0x14EF
+	Script		stoneitemdeed
 }
 
 Item  0xb02b
