--- a/trunk/099/pkg/items/decorations/rotate.cfg
+++ b/trunk/099/pkg/items/decorations/rotate.cfg
@@ -1745,6 +1745,10 @@ graphic 0x2df4
 	newgraphic 0x2df3
 }
 
+///////////////////
+// Stygian Abyss
+//////////////////
+
 graphic 0x4023
 {
 	//gargishchair
@@ -1767,6 +1771,78 @@ graphic 0x4026
 {
 	//gargishchest
 	newgraphic 0x4025
+}
+
+graphic 0x4037
+{
+	//gargishbanner
+	newgraphic 0x4038
+}
+
+graphic 0x4038
+{
+	//gargishbanner
+	newgraphic 0x4037
+}
+
+graphic 0x403a
+{
+	//gargishfloormirror
+	newgraphic 0x4046
+}
+
+graphic 0x4046
+{
+	//gargishfloormirror
+	newgraphic 0x403a
+}
+
+graphic 0x403d
+{
+	//gargishpainting
+	newgraphic 0x403e
+}
+
+graphic 0x403e
+{
+	//gargishpainting
+	newgraphic 0x403d
+}
+
+graphic 0x403f
+{
+	//gargishsculpture
+	newgraphic 0x4040
+}
+
+graphic 0x4040
+{
+	//gargishsculpture
+	newgraphic 0x403f
+}
+
+graphic 0x4042
+{
+	//gargishvase
+	newgraphic 0x4043
+}
+
+graphic 0x4043
+{
+	//gargishvase
+	newgraphic 0x4042
+}
+
+graphic 0x4044
+{
+	//gargishwallmirror
+	newgraphic 0x4045
+}
+
+graphic 0x4045
+{
+	//gargishwallmirror
+	newgraphic 0x4044
 }
 
 graphic 0x4141
