--- a/trunk/099/pkg/skills/craftingskills/alchemy/itemdesc.cfg
+++ b/trunk/099/pkg/skills/craftingskills/alchemy/itemdesc.cfg
@@ -6,7 +6,7 @@ Item 0x1849
 {
 	Name			heatingstand
 	desc			heating stand
-	script		alchemy
+	script		newalchemy
 	vendorsellsfor	80
 	vendorbuysfor	27
 	Weight		1
@@ -15,7 +15,7 @@ Item 0x1849
 Item 0x0e9b
 {
 	Name			mortar
-	Script		alchemy
+	Script		newalchemy
 	VendorSellsFor	9
 	VendorBuysFor	4
 	Weight		1
