--- a/trunk/099/pkg/skills/craftingskills/blacksmithy/menu.cfg
+++ b/trunk/099/pkg/skills/craftingskills/blacksmithy/menu.cfg
@@ -24,6 +24,7 @@ Item platemail
 	Entry	0x1410	Platemail Arms
 	Entry	0x1413	Platemail Gorget
 	Entry	0x1414	Platemail Gloves
+	Entry	0x1412	Plate Helm
 }
 
 Item chainmail
@@ -49,7 +50,7 @@ Item helms
 	Entry	0x140a	Helmet
 	Entry	0x140c	Bascinet
 	Entry	0x140e	Nose Helm
-	Entry	0x1412	Plate Helm
+	Entry	0x2689	Winged Helmet
 	Entry	0x27bf	Mail Hatsuburi
 	Entry	0x27c0	Plate Hatsuburi
 	Entry	0x2b6e	Circlet
@@ -82,7 +83,7 @@ Item blades
 	Entry	0x13b9	Viking Sword
 	Entry	0x0f5e	Broad Sword
 	Entry	0x26bb	Bone Harvester
-	Entry	0x26c1	Crescent Blade
+	Entry 0x26ce	Paladin Sword
 }
 
 Item axes
@@ -120,6 +121,7 @@ Item polearms
 	Entry	0x26be	Pike
 	Entry	0x26bf	Double Bladed Staff
 	Entry	0x26c0	Lance
+	Entry	0x26c1	Crescent Blade
 }
 
 Item lightblades
