--- a/trunk/099/pkg/skills/craftingskills/stonecrafting/config/StoneMenu.cfg
+++ b/trunk/099/pkg/skills/craftingskills/stonecrafting/config/StoneMenu.cfg
@@ -64,7 +64,13 @@ Craftitem Miscelaneous
 	Item	statue4
 	Item	statue5
 	Item	bust
+	Item	towersculpture1
+	Item	towersculpture2
+	Item	towersculpture3
 	Item	CatWithBowlStatue
+	Item	GargishPainting
+	Item	GargishSculpture
+	Item	GargishVase
 }
 
 Craftitem Addons
