--- a/trunk/099/pkg/skills/craftingskills/stonecrafting/config/stonecrafting.cfg
+++ b/trunk/099/pkg/skills/craftingskills/stonecrafting/config/stonecrafting.cfg
@@ -82,6 +82,67 @@ stoneitem 0x12ca
 	mark			1
 }
 
+stoneitem 0x2419
+{
+	name			a wide tower sculpture
+	material		3
+	type			stone
+	skill		45
+	retain		1
+	mark			1
+}
+
+stoneitem 0x241a
+{
+	name			a tower sculpture
+	material		3
+	type			stone
+	skill		45
+	retain		1
+	mark			1
+}
+
+stoneitem 0x241b
+{
+	name			a tall tower sculpture
+	material		3
+	type			stone
+	skill		45
+	retain		1
+	mark			1
+}
+
+stoneitem 0x403d
+{
+	name			a gargish painting
+	material		3
+	type			stone
+	skill		90
+	retain		1
+	mark			1
+}
+
+stoneitem 0x403f
+{
+	name			a gargish sculpture
+	material		4
+	type			stone
+	skill		95
+	retain		1
+	mark			1
+}
+
+stoneitem 0x4042
+{
+	name			a gargish vase
+	material		4
+	type			stone
+	skill		90
+	retain		1
+	mark			1
+}
+
+
 ////////////////////////
 // furniture
 ////////////////////////
