--- a/trunk/099/pkg/skills/craftingskills/tailoring/cloth_items.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tailoring/cloth_items.cfg
@@ -26,6 +26,13 @@ tailoring 0x1F03
 	skill	85
 }
 
+tailoring 0x204e
+{
+	Name		death robe
+	material	20
+	skill	85
+}
+
 tailoring 0x1F7B
 {
 	Name		doublet
