--- a/trunk/099/pkg/skills/craftingskills/woodworking/config/CarpMenu.cfg
+++ b/trunk/099/pkg/skills/craftingskills/woodworking/config/CarpMenu.cfg
@@ -92,6 +92,7 @@ Craftitem Containers
 	Item	CherryArmoire2
 	Item	Chestofdrawers
 	Item	ChestDrawerDark
+	Item	DresserDeed
 	Item	WoodenBox
 	Item	WoodenChest
 	Item	SmallCrate
@@ -139,6 +140,7 @@ Craftitem Miscelaneous
 	Item	statuelantern
 	Item	redhanginglantern
 	Item	whitehanginglantern
+	Item	DecorativeAcorn
 }
 
 Craftitem Weapons
@@ -172,6 +174,9 @@ Craftitem Addons
 	Item	LoomDeed
 	Item	MillDeed
 	Item	ArcaneCircleDeed
+	Item	ArcanistStatueDeed
+	Item	SquirrelStatueDeed
+	Item	WarriorStatueDeed
 
 }
 
