--- a/trunk/099/pkg/combat/weapons/itemdesc.cfg
+++ b/trunk/099/pkg/combat/weapons/itemdesc.cfg
@@ -117,7 +117,7 @@ Weapon 0x13e3
 	Damage			3d6
 	Attribute			Mace
 	MaxHP			100
-	Script			:blacksmithy:make_blacksmith_items
+	Script			:blacksmithy:blacksmithy
 	HitSound			0x13C
 	MissSound			0x234
 	Anim				0xB
@@ -861,7 +861,7 @@ Weapon 0X0FB4
 	VendorSellsFor	150
 	VendorBuysFor	60
 	blockcircle	1
-	Script		:blacksmithy:make_blacksmith_items
+	Script		:blacksmithy:blacksmithy
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 	hitscript		:weapons:mainhit
