--- a/trunk/099/pkg/skills/craftingskills/alchemy/itemdesc.cfg
+++ b/trunk/099/pkg/skills/craftingskills/alchemy/itemdesc.cfg
@@ -26,7 +26,7 @@ Item 0x17069
 	Name			potionbook
 	Desc			alchemist's handbook
 	Graphic		0x0ff1
-	Script		potionbook
+	Script		newalchemy
 	Weight		1
 	VendorSellsFor	50
 //	OldObjtype		0x7069
