- Migrated Blacksmithy to the new crafting menus. - Corrected the itemdesc entries for small and large bagballs - Gate destination was not being correctly set for Summon Player druid spell. Fixed. - Implemented Permanent Nightsight for elves. There are a few things to fix yet. - The Alchemy Handbook now opens the Alchemy crafting menu. - The Alchemy crafting menu now offers the choice to charge alchemy symbols through the Modify Item button. - Migrated Tailoring to the new crafting menus. - Adjusted time delay between crafting sounds for stonecrafting. - Tinkering can now repair stone items too. - Corrected a few messages in the item upgrade routines.

--- a/099/pkg/combat/weapons/itemdesc.cfg
+++ b/099/pkg/combat/weapons/itemdesc.cfg
@@ -117,7 +117,7 @@ Weapon 0x13e3
 	Damage			3d6
 	Attribute			Mace
 	MaxHP			100
-	Script			:blacksmithy:make_blacksmith_items
+	Script			:blacksmithy:blacksmithy
 	HitSound			0x13C
 	MissSound			0x234
 	Anim				0xB
@@ -861,7 +861,7 @@ Weapon 0X0FB4
 	VendorSellsFor	150
 	VendorBuysFor	60
 	blockcircle	1
-	Script		:blacksmithy:make_blacksmith_items
+	Script		:blacksmithy:blacksmithy
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 	hitscript		:weapons:mainhit
