--- a/099/pkg/skills/craftingskills/blacksmithy/itemdesc.cfg
+++ b/099/pkg/skills/craftingskills/blacksmithy/itemdesc.cfg
@@ -1,11 +1,10 @@
 Item 0x0FBB
 {
 	Name				tongs
-	Script			make_blacksmith_items
+	Script			blacksmithy
 	vendorbuysfor		12
 	vendorsellsfor		30
 }
-
 Item 0x170d0
 {
 	Name				BlacksmithySpecialOrderContract
