--- a/099/pkg/skills/craftingskills/tailoring/itemdesc.cfg
+++ b/099/pkg/skills/craftingskills/tailoring/itemdesc.cfg
@@ -5,7 +5,7 @@
 Item 0x0F9D
 {
 	Name				SewingKit
-	Script			tailoring
+	Script			newtailoring
 	VendorSellsFor		12
 	VendorBuysFor		5
 }
@@ -204,12 +204,14 @@ Item 0x1374
 }
 
 // Spinning Wheel and loom
-Item 0x101E
+Item 0x2DD9
 {
-	Name		spinning wheel
+	Name		elvenspinningwheel
+	Desc		elven spinning wheel
+}
 
-
-Item 0x2E3C
+Item 0x2DDA
 {
-	Name		elven spinning wheel
+	Name		elvenspinningwheel2
+	Desc		elven spinning wheel
 }
