--- a/099/pkg/skills/harvestingskills/mining/itemdesc.cfg
+++ b/099/pkg/skills/harvestingskills/mining/itemdesc.cfg
@@ -142,6 +142,7 @@ Item 0x16012
 	Graphic		0x1bf2
 	Type			metal
 	Color		0x45e
+	Difficulty		60
 	Weight		1/2
 //	OldObjtype		0x6012
 }
@@ -153,6 +154,7 @@ Item 0x16013
 	Graphic		0x1bf2
 	Type			metal
 	Color		0x3ea
+	Difficulty		70
 	Weight		1/2
 //	OldObjtype		0x6013
 }
@@ -164,6 +166,7 @@ Item 0x16014
 	Graphic		0x1bf2
 	Type			metal
 	Color		0x602
+	Difficulty		80
 	Weight		1/2
 //	OldObjtype		0x6014
 }
@@ -175,6 +178,7 @@ Item 0x16015
 	Graphic		0x1bf2
 	Type			metal
 	Color		0x455
+	Difficulty		85
 	Weight		1/2
 //	OldObjtype		0x6015
 }
@@ -186,6 +190,7 @@ Item 0x16016
 	Graphic		0x1bf2
 	Type			metal
 	Color		0x6b8
+	Difficulty		90
 	Weight		1/2
 //	OldObjtype		0x6016
 }
@@ -197,6 +202,7 @@ Item 0x16017
 	Graphic		0x1bf2
 	Type			metal
 	Color		0x852
+	Difficulty		95
 	Weight		1/2
 //	OldObjtype		0x6017
 }
@@ -208,6 +214,7 @@ Item 0x16018
 	Graphic		0x1bf2
 	Type			metal
 	Color		0x4df
+	Difficulty		98
 	Weight		1/2
 //	OldObjtype		0x6018
 }
@@ -219,6 +226,7 @@ Item 0x17063
 	Graphic		0x1bf2
 	Type			metal
 	Color		1322
+	Difficulty		98
 	Weight		1/2
 //	OldObjtype		0x7063
 }
@@ -230,6 +238,7 @@ Item 0x17064
 	Graphic		0x1bf2
 	Type			metal
 	Color		1644
+	Difficulty		98
 	Weight		1/2
 //	OldObjtype		0x7064
 }
