--- a/099/pkg/skills/craftingskills/tailoring/config/tailoring.cfg
+++ b/099/pkg/skills/craftingskills/tailoring/config/tailoring.cfg
@@ -1,12 +1,14 @@
-==================
-CLOTH
-==================
+//==================
+//CLOTH
+//==================
 tailoring 0x1EFD
 {
 	Name		fancy shirt
 	type		cloth
 	material	8
 	skill	60
+	mark		1
+	retain	1
 }
 
 tailoring 0x1EFF
@@ -15,6 +17,8 @@ tailoring 0x1EFF
 	type		cloth
 	material	12
 	skill	80
+	mark		1
+	retain	1
 }
 
 tailoring 0x1F01
@@ -23,6 +27,8 @@ tailoring 0x1F01
 	type		cloth
 	material	10
 	skill	75
+	mark		1
+	retain	1
 }
 
 tailoring 0x1F03
@@ -31,6 +37,18 @@ tailoring 0x1F03
 	type		cloth
 	material	16
 	skill	85
+	mark		1
+	retain	1
+}
+
+tailoring 0x204e
+{
+	Name		death robe
+	type		cloth
+	material	20
+	skill	85
+	mark		1
+	retain	1
 }
 
 tailoring 0x1F7B
@@ -39,6 +57,8 @@ tailoring 0x1F7B
 	type		cloth
 	material	8
 	skill	55
+	mark		1
+	retain	1
 }
 
 tailoring 0x1F9F
@@ -47,6 +67,8 @@ tailoring 0x1F9F
 	type		cloth
 	material	14
 	skill	85
+	mark		1
+	retain	1
 }
 
 tailoring 0x1FA1
@@ -55,6 +77,8 @@ tailoring 0x1FA1
 	type		cloth
 	material	12
 	skill	75
+	mark		1
+	retain	1
 }
 
 tailoring 0x1FFD
@@ -63,6 +87,8 @@ tailoring 0x1FFD
 	type		cloth
 	material	10
 	skill	70
+	mark		1
+	retain	1
 }
 
 tailoring 0x1517
@@ -71,6 +97,8 @@ tailoring 0x1517
 	type		cloth
 	material	8
 	skill	55
+	mark		1
+	retain	1
 }
 
 tailoring 0x1515
@@ -79,6 +107,8 @@ tailoring 0x1515
 	type		cloth
 	material	14
 	skill	80
+	mark		1
+	retain	1
 }
 
 tailoring 0x1516
@@ -87,6 +117,8 @@ tailoring 0x1516
 	type		cloth
 	material	10
 	skill	65
+	mark		1
+	retain	1
 }
 
 tailoring 0x152E
@@ -95,6 +127,8 @@ tailoring 0x152E
 	type		cloth
 	material	6
 	skill	45
+	mark		1
+	retain	1
 }
 
 tailoring 0x1537
@@ -103,6 +137,8 @@ tailoring 0x1537
 	type		cloth
 	material	8
 	skill	65
+	mark		1
+	retain	1
 }
 
 tailoring 0x1539
@@ -111,6 +147,8 @@ tailoring 0x1539
 	type		cloth
 	material	8
 	skill	60
+	mark		1
+	retain	1
 }
 
 tailoring 0x153a
@@ -119,6 +157,8 @@ tailoring 0x153a
 	type		cloth
 	material	8
 	skill	60
+	mark		1
+	retain	1
 }
 
 tailoring 0x153B
@@ -127,6 +167,8 @@ tailoring 0x153B
 	type		cloth
 	material	6
 	skill	50
+	mark		1
+	retain	1
 }
 
 tailoring 0x153D
@@ -135,6 +177,8 @@ tailoring 0x153D
 	type		cloth
 	material	10
 	skill	70
+	mark		1
+	retain	1
 }
 
 tailoring 0x153F
@@ -143,6 +187,8 @@ tailoring 0x153F
 	type		cloth
 	material	2
 	skill	10
+	mark		1
+	retain	1
 }
 
 tailoring 0x1541
@@ -151,6 +197,8 @@ tailoring 0x1541
 	type		cloth
 	material	4
 	skill	45
+	mark		1
+	retain	1
 }
 
 tailoring 0x1543
@@ -159,6 +207,8 @@ tailoring 0x1543
 	type		cloth
 	material	2
 	skill	20
+	mark		1
+	retain	1
 }
 
 tailoring 0x1713
@@ -167,6 +217,8 @@ tailoring 0x1713
 	type		cloth
 	material	4
 	skill	35
+	mark		1
+	retain	1
 }
 
 tailoring 0x1714
@@ -175,6 +227,8 @@ tailoring 0x1714
 	type		cloth
 	material	4
 	skill	35
+	mark		1
+	retain	1
 }
 
 tailoring 0x1715
@@ -183,6 +237,8 @@ tailoring 0x1715
 	type		cloth
 	material	3
 	skill	30
+	mark		1
+	retain	1
 }
 
 tailoring 0x1716
@@ -191,6 +247,8 @@ tailoring 0x1716
 	type		cloth
 	material	4
 	skill	35
+	mark		1
+	retain	1
 }
 
 tailoring 0x1717
@@ -199,6 +257,8 @@ tailoring 0x1717
 	type		cloth
 	material	4
 	skill	35
+	mark		1
+	retain	1
 }
 
 tailoring 0x1719
@@ -207,6 +267,8 @@ tailoring 0x1719
 	type		cloth
 	material	3
 	skill	30
+	mark		1
+	retain	1
 }
 
 tailoring 0x171A
@@ -215,6 +277,8 @@ tailoring 0x171A
 	type		cloth
 	material	3
 	skill	25
+	mark		1
+	retain	1
 }
 
 tailoring 0x171B
@@ -223,6 +287,8 @@ tailoring 0x171B
 	type		cloth
 	material	4
 	skill	40
+	mark		1
+	retain	1
 }
 
 tailoring 0x171C
@@ -231,6 +297,8 @@ tailoring 0x171C
 	type		cloth
 	material	4
 	skill	40
+	mark		1
+	retain	1
 }
 
 tailoring 0x1718
@@ -239,6 +307,8 @@ tailoring 0x1718
 	type		cloth
 	material	7
 	skill	50
+	mark		1
+	retain	1
 }
 
 tailoring 0xB017
@@ -266,6 +336,8 @@ tailoring 0x27cd
 	type		cloth
 	material	20
 	skill	95
+	mark		1
+	retain	1
 }
 
 tailoring 0x27ce
@@ -274,6 +346,8 @@ tailoring 0x27ce
 	type		cloth
 	material	20
 	skill	95
+	mark		1
+	retain	1
 }
 
 tailoring 0x27da
@@ -282,6 +356,8 @@ tailoring 0x27da
 	type		cloth
 	material	4
 	skill	35
+	mark		1
+	retain	1
 }
 
 tailoring 0x27df
@@ -290,6 +366,8 @@ tailoring 0x27df
 	type		cloth
 	material	12
 	skill	75
+	mark		1
+	retain	1
 }
 
 tailoring 0x27e1
@@ -298,6 +376,8 @@ tailoring 0x27e1
 	type		cloth
 	material	6
 	skill	40
+	mark		1
+	retain	1
 }
 
 tailoring 0x27e2
@@ -306,6 +386,8 @@ tailoring 0x27e2
 	type		cloth
 	material	6
 	skill	40
+	mark		1
+	retain	1
 }
 
 tailoring 0x27e3
@@ -314,6 +396,8 @@ tailoring 0x27e3
 	type		cloth
 	material	6
 	skill	35
+	mark		1
+	retain	1
 }
 
 tailoring 0x27e4
@@ -322,6 +406,8 @@ tailoring 0x27e4
 	type		cloth
 	material	20
 	skill	95
+	mark		1
+	retain	1
 }
 
 tailoring 0x27e5
@@ -330,6 +416,8 @@ tailoring 0x27e5
 	type		cloth
 	material	10
 	skill	65
+	mark		1
+	retain	1
 }
 
 tailoring 0x27e6
@@ -338,6 +426,8 @@ tailoring 0x27e6
 	type		cloth
 	material	12
 	skill	75
+	mark		1
+	retain	1
 }
 
 tailoring 0x27e7
@@ -346,6 +436,8 @@ tailoring 0x27e7
 	type		cloth
 	material	12
 	skill	75
+	mark		1
+	retain	1
 }
 
 tailoring 0x27eb
@@ -354,6 +446,8 @@ tailoring 0x27eb
 	type		cloth
 	material	6
 	skill	50
+	mark		1
+	retain	1
 }
 
 tailoring 0x27ec
@@ -362,6 +456,8 @@ tailoring 0x27ec
 	type		cloth
 	material	8
 	skill	50
+	mark		1
+	retain	1
 }
 
 
@@ -374,6 +470,8 @@ tailoring 0x3176
 	type		cloth
 	material	10
 	skill	70
+	mark		1
+	retain	1
 }
 
 tailoring 0x3175
@@ -382,6 +480,8 @@ tailoring 0x3175
 	type		cloth
 	material	8
 	skill	60
+	mark		1
+	retain	1
 }
 
 tailoring 0x3179
@@ -390,6 +490,8 @@ tailoring 0x3179
 	type		cloth
 	material	10
 	skill	70
+	mark		1
+	retain	1
 }
 
 tailoring 0x3173
@@ -398,6 +500,8 @@ tailoring 0x3173
 	type		cloth
 	material	20
 	skill	95
+	mark		1
+	retain	1
 }
 
 tailoring 0x3174
@@ -406,11 +510,140 @@ tailoring 0x3174
 	type		cloth
 	material	20
 	skill	95
+	mark		1
+	retain	1
 }
 
-==================
-LEATHER
-==================
+/////////////////
+// Stygian Abyss
+/////////////////
+
+// Clothes
+
+tailoring 0x4000
+{
+	Name		gargish robe
+	material	18
+	type			cloth
+	skill	85
+	time			1
+	mark		1
+	retain	1
+}
+
+tailoring 0x4002
+{
+	Name		gargish fancy robe
+	material	20
+	type			cloth
+	skill	95
+	time			1
+	mark		1
+	retain	1
+}
+
+tailoring 0x50d8
+{
+	Name		gargoyle half apron
+	material	8
+	type			cloth
+	skill	50
+	time			1
+	mark		1
+	retain	1
+}
+
+tailoring 0x46aa
+{
+	Name		gargoyle body sash
+	material	4
+	type			cloth
+	skill	45
+	time			1
+	mark		1
+	retain	1
+}
+
+tailoring 0x46b4
+{
+	Name		gargoyle body sash
+	material	4
+	type			cloth
+	skill	45
+	time			1
+	mark		1
+	retain	1
+}
+
+// Armor
+tailoring 0x4062
+{ 
+	Name			gargish cloth chest
+	material		45
+	type			cloth
+	skill		95
+	time			3
+	Exceptional	1
+	bulk_deed		0
+	mark		1
+	retain	1
+}
+
+tailoring 0x4066
+{ 
+	Name			gargish cloth leggings
+	material		32
+	type			cloth
+	skill		90
+	time			3
+	Exceptional	1
+	bulk_deed		0
+	mark		1
+	retain	1
+}
+
+tailoring 0x4064
+{ 
+	Name			gargish cloth kilt
+	material		45
+	type			cloth
+	skill		90
+	time			3
+	Exceptional	1
+	bulk_deed		0
+	mark		1
+	retain	1
+}
+
+tailoring 0x4060
+{ 
+	Name			gargish cloth arms
+	material		32
+	type			cloth
+	skill		85
+	time			3
+	Exceptional	1
+	bulk_deed		0
+	mark		1
+	retain	1
+}
+
+tailoring 0x45a4
+{ 
+	Name			cloth wing armor
+	material		25
+	type			cloth
+	skill		80
+	time			3
+	Exceptional	1
+	bulk_deed		0
+	mark		1
+	retain	1
+}
+
+//==================
+//LEATHER
+//==================
 
 ///////////////////
 //  Leather armor
@@ -423,7 +656,9 @@ leather 0x13C7
 	material	6
 	skill	45
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x13C6
@@ -433,7 +668,9 @@ leather 0x13C6
 	material	6
 	skill	45
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x1DB9
@@ -443,7 +680,9 @@ leather 0x1DB9
 	material	8
 	skill	50
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x13C5
@@ -453,7 +692,9 @@ leather 0x13C5
 	material	12
 	skill	55
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x13CB
@@ -463,7 +704,9 @@ leather 0x13CB
 	material	20
 	skill	65
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x1C08
@@ -473,7 +716,9 @@ leather 0x1C08
 	material	20
 	skill	65
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x13CC
@@ -483,7 +728,9 @@ leather 0x13CC
 	material	20
 	skill	65
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x13CC
@@ -493,7 +740,9 @@ leather 0x13CC
 	material	20
 	skill	65
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x13D3
@@ -503,17 +752,21 @@ leather 0x13D3
 	material	20
 	skill	65
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x1C06
 {
-	Name		leather armor
+	Name		female leather armor
 	type		hide
 	material	20
 	skill	65
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x1C0A
@@ -523,7 +776,9 @@ leather 0x1C0A
 	material	20
 	skill	65
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 
@@ -539,7 +794,9 @@ leather 0x13D6
 	material	8
 	skill	65
 	time		2
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x13D5
@@ -549,7 +806,9 @@ leather 0x13D5
 	material	8
 	skill	65
 	time		2
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x1708b
@@ -559,7 +818,9 @@ leather 0x1708b
 	material	12
 	skill	70
 	time		2
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x13DC
@@ -569,7 +830,9 @@ leather 0x13DC
 	material	20
 	skill	80
 	time		2
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x13D4
@@ -579,7 +842,9 @@ leather 0x13D4
 	material	20
 	skill	80
 	time		2
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x13DA
@@ -589,7 +854,9 @@ leather 0x13DA
 	material	32
 	skill	90
 	time		2
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x13DB
@@ -599,7 +866,9 @@ leather 0x13DB
 	material	32
 	skill	90
 	time		2
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x1C02
@@ -609,7 +878,9 @@ leather 0x1C02
 	material	32
 	skill	90
 	time		2
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x1C0C
@@ -619,7 +890,9 @@ leather 0x1C0C
 	material	32
 	skill	90
 	time		2
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x1C00
@@ -629,7 +902,9 @@ leather 0x1C00
 	material	32
 	skill	90
 	time		2
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 
@@ -646,6 +921,8 @@ leather 0x170B
 	material	8
 	skill	50
 	time		1
+	mark		1
+	retain	1
 }
 
 leather 0x170D
@@ -655,6 +932,8 @@ leather 0x170D
 	material	4
 	skill	40
 	time		1
+	mark		1
+	retain	1
 }
 
 leather 0x170F
@@ -664,6 +943,8 @@ leather 0x170F
 	material	6
 	skill	35
 	time		1
+	mark		1
+	retain	1
 }
 
 leather 0x1711
@@ -673,6 +954,8 @@ leather 0x1711
 	material	10
 	skill	60
 	time		1
+	mark		1
+	retain	1
 }
 
 
@@ -689,7 +972,9 @@ leather 0x0E76
 	material	2
 	skill	20
 	time		1
-	hasquality	0
+	Exceptional	0
+	mark		1
+	retain	1
 }
 
 leather 0x0E75
@@ -699,7 +984,9 @@ leather 0x0E75
 	material	4
 	skill	40
 	time		1
-	hasquality	0
+	Exceptional	0
+	mark		1
+	retain	1
 }
 
 leather 0x0E79
@@ -709,7 +996,9 @@ leather 0x0E79
 	material	2
 	skill	25
 	time		1
-	hasquality	0
+	Exceptional	0
+	mark		1
+	retain	1
 }
 
 leather 0x1374
@@ -719,7 +1008,33 @@ leather 0x1374
 	material	4
 	skill	35
 	time		1
-	hasquality	0
+	Exceptional	0
+	mark		1
+	retain	1
+}
+
+leather 0x2256
+{
+	Name		small bagball
+	type		hide
+	material	8
+	skill	40
+	time		1
+	Exceptional	0
+	mark		1
+	retain	1
+}
+
+leather 0x2257
+{
+	Name		large bagball
+	type		hide
+	material	12
+	skill	40
+	time		1
+	Exceptional	0
+	mark		1
+	retain	1
 }
 
 
@@ -735,7 +1050,9 @@ leather 0x2fc7
 	material	6
 	skill	45
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x2fc6
@@ -745,7 +1062,9 @@ leather 0x2fc6
 	material	6
 	skill	45
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x2fc8
@@ -755,7 +1074,9 @@ leather 0x2fc8
 	material	12
 	skill	55
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x2fc9
@@ -765,7 +1086,9 @@ leather 0x2fc9
 	material	20
 	skill	65
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x2fca
@@ -775,7 +1098,9 @@ leather 0x2fca
 	material	20
 	skill	65
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x2fc5
@@ -785,7 +1110,9 @@ leather 0x2fc5
 	material	20
 	skill	65
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x2fcb
@@ -795,7 +1122,9 @@ leather 0x2fcb
 	material	20
 	skill	65
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x315f
@@ -805,7 +1134,9 @@ leather 0x315f
 	material	20
 	skill	65
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 
@@ -822,7 +1153,9 @@ leather 0x2b76
 	material	12
 	skill	70
 	time		3
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x2b75
@@ -832,7 +1165,9 @@ leather 0x2b75
 	material	12
 	skill	70
 	time		3
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x2b77
@@ -842,7 +1177,9 @@ leather 0x2b77
 	material	32
 	skill	85
 	time		3
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x2b78
@@ -852,7 +1189,9 @@ leather 0x2b78
 	material	45
 	skill	95
 	time		3
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x2b74
@@ -862,7 +1201,9 @@ leather 0x2b74
 	material	45
 	skill	95
 	time		3
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x2b79
@@ -872,7 +1213,9 @@ leather 0x2b79
 	material	45
 	skill	95
 	time		3
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 
@@ -888,16 +1231,20 @@ leather 0x317a
 	material	8
 	skill	50
 	time		1
+	mark		1
+	retain	1
 }
 
 leather 0x3171
 {
-	Name		quiver
+	Name		elven quiver
 	type		hide
 	material	4
 	skill	40
 	time		1
-	hasquality	0
+	Exceptional	0
+	mark		1
+	retain	1
 }
 
 /////////////////
@@ -911,7 +1258,9 @@ leather 0x27c5
 	material	6
 	skill	45
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x27c1
@@ -921,7 +1270,9 @@ leather 0x27c1
 	material	8
 	skill	50
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x27c3
@@ -931,7 +1282,9 @@ leather 0x27c3
 	material	8
 	skill	50
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x27c9
@@ -941,7 +1294,9 @@ leather 0x27c9
 	material	12
 	skill	55
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x27d1
@@ -951,7 +1306,9 @@ leather 0x27d1
 	material	20
 	skill	65
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x27d5
@@ -961,7 +1318,9 @@ leather 0x27d5
 	material	20
 	skill	65
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x27c6
@@ -971,7 +1330,9 @@ leather 0x27c6
 	material	20
 	skill	65
 	time		1
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 
@@ -985,8 +1346,10 @@ leather 0X27f5
 	material		30
 	skill		90
 	time			4
-	hasquality	1
+	Exceptional	1
 	bulk_deed		0
+	mark		1
+	retain	1
 }
 
 leather 0X2790
@@ -996,8 +1359,10 @@ leather 0X2790
 	material		30
 	skill		90
 	time			4
-	hasquality	1
+	Exceptional	1
 	bulk_deed		0
+	mark		1
+	retain	1
 }
 
 leather 0X27db
@@ -1006,8 +1371,10 @@ leather 0X27db
 	material		30
 	skill		90
 	time			4
-	hasquality	1
+	Exceptional	1
 	bulk_deed		0
+	mark		1
+	retain	1
 }
 
 leather 0x27dd
@@ -1017,7 +1384,9 @@ leather 0x27dd
 	material	8
 	skill	65
 	time		2
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x27d9
@@ -1027,7 +1396,9 @@ leather 0x27d9
 	material	12
 	skill	70
 	time		2
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x27dc
@@ -1037,7 +1408,9 @@ leather 0x27dc
 	material	32
 	skill	90
 	time		2
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x27de
@@ -1047,7 +1420,9 @@ leather 0x27de
 	material	32
 	skill	90
 	time		2
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 
@@ -1062,7 +1437,9 @@ leather 0x27e8
 	material	12
 	skill	70
 	time		3
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x27cf
@@ -1072,7 +1449,9 @@ leather 0x27cf
 	material	22
 	skill	75
 	time		3
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x27d4
@@ -1082,7 +1461,9 @@ leather 0x27d4
 	material	22
 	skill	75
 	time		3
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x27ca
@@ -1092,7 +1473,9 @@ leather 0x27ca
 	material	32
 	skill	85
 	time		3
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x27d2
@@ -1102,7 +1485,9 @@ leather 0x27d2
 	material	45
 	skill	95
 	time		3
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x27c7
@@ -1112,7 +1497,9 @@ leather 0x27c7
 	material	45
 	skill	95
 	time		3
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
 leather 0x27d6
@@ -1122,7 +1509,104 @@ leather 0x27d6
 	material	45
 	skill	95
 	time		3
-	hasquality	1
+	Exceptional	1
+	mark		1
+	retain	1
 }
 
+/////////////////
+// Stygian Abyss
+/////////////////
+
+// Armor
+leather 0x404a
+{ 
+	Name			gargish leather chest
+	material		45
+	type			hide
+	skill		95
+	time			3
+	Exceptional	1
+	bulk_deed		0
+	mark		1
+	retain	1
+}
+
+leather 0x404e
+{ 
+	Name			gargish leather leggings
+	material		32
+	type			hide
+	skill		90
+	time			3
+	Exceptional	1
+	bulk_deed		0
+	mark		1
+	retain	1
+}
+
+leather 0x404c
+{ 
+	Name			gargish leather kilt
+	material		45
+	type			hide
+	skill		90
+	time			3
+	Exceptional	1
+	bulk_deed		0
+	mark		1
+	retain	1
+}
+
+leather 0x4048
+{ 
+	Name			gargish leather arms
+	material		32
+	type			hide
+	skill		85
+	time			3
+	Exceptional	1
+	bulk_deed		0
+	mark		1
+	retain	1
+}
+
+leather 0x41d8
+{ 
+	Name			leather talons
+	material		15
+	type			hide
+	skill		80
+	time			3
+	Exceptional	1
+	bulk_deed		0
+	mark		1
+	retain	1
+}
+
+leather 0x450d
+{ 
+	Name			gargoyle belt
+	material		15
+	type			hide
+	skill		80
+	time			3
+	Exceptional	1
+	bulk_deed		0
+	mark		1
+	retain	1
+}
+
+leather 0x457e
+{ 
+	Name			leather wing armor
+	material		25
+	type			hide
+	skill		80
+	time			3
+	Exceptional	1
+	bulk_deed		0
+	mark		1
+	retain	1
+}
 
