- Corrected the objtype for small and large bagball. - Increased the Passive Mana/Stamina Regeneration rate bonuses granted by Meditation and Focus - Increased the Armor Ratings of all pieces of armor. Clothing was left untouched. - Added musical instruments to the allweapons lootgroup, making them available as magic items. - Decreased the Hunter bonus to Archery Damage. Also added support for Heavy Critical to the Archery script. - Modified the damage dice in the the player's Wrestling script. - Increased the damage of all weapons. Also adjusted the speed of some of them. - Lots of changes to the Tooltips script. It now requires less bandwidth to send, and added more info for some items. - Readjusted some of the Tokuno monsters now that the Armor and Weapons power has increased. - The instrument's skill bonus is now taken into account for determining the Discordance debuff applied. - Removed the random failure from the Peacemake and Discordance skillchecks. - Elven quiver can now be dyed like bags and backpacks. - Metal chests now retain the color of the material. - Added the info on how much Tinkering is needed for making a container lockable to the woodworking item descriptor file. - More modifications to the Healing skill to make it a little easier. - Added day and night to The Lost Lands, Heartwood, Ilshenar, and the sailing spot. - Some fixes to the temporary mod scripts so the buff/debuff icons are correctly updated. - Increased the max skill bonus from items to 20. - Finally made the light level to set correctly on logon.

--- a/099/config/servspecopt.cfg
+++ b/099/config/servspecopt.cfg
@@ -153,3 +153,5 @@ ItemColorMask=0x4FFF
 # Uncomment this if you want ethereal mounts and do not use older clients.
 
 UseWinLFH=1
+
+CoreSendsSeason=1
