--- a/099/pkg/skills/craftingskills/crafting/config/craftConfig.cfg
+++ b/099/pkg/skills/craftingskills/crafting/config/craftConfig.cfg
@@ -116,7 +116,7 @@ Crafting Stonecrafting
  
 	MenuFile	:stonecrafting:StoneMenu
 	ExceptionalName	Crafted by
-	EndMessage	Stonecrafted
+	EndMessage	stonecrafting
 }
 
 Crafting Carpentry
