--- a/099/regions/light.cfg
+++ b/099/regions/light.cfg
@@ -8,6 +8,13 @@ LightRegion Background
 	LightLevel	0
 }
 
+LightRegion IlshenarBackground
+{
+	Range		0 0 2303 1599
+	Realm		ilshenar
+	LightLevel	0
+}
+
 LightRegion MalasBackground
 {
 	Range		511 0 2559 2047
@@ -61,9 +68,30 @@ LightRegion CastleBlackthorne
 # Plunge the dungeons, and green acres, and the new lands (T2A), into darkness
 LightRegion Dungeons
 {
-    Range       5120 0 6143 4095
+    Range       5120 0 7167 2047
     Realm		britannia
     LightLevel  20
+}
+
+LightRegion LostLandsBackground
+{
+	Range	5120 2304 6160 4095
+	Realm	britannia
+	LightLevel	0
+}
+
+LightRegion Heartwood
+{
+	Range		6911 255 7167 511
+	Realm		britannia
+	LightLevel	0
+}
+
+LightRegion Sailto
+{
+	Range	6848 1407 7148 1710
+	Realm	britannia
+	LightLevel	0
 }
 
 LightRegion MalasDungeons
