--- a/099/regions/regions.cfg
+++ b/099/regions/regions.cfg
@@ -192,7 +192,7 @@ Region LBT's Castle
 
 Region Dungeons
 {
-    Range       5120 0 7167 1992
+    Range       5120 0 7167 2047
     Guarded     0
     NoCast      0
     Realm	britannia
@@ -236,12 +236,29 @@ Region SeaMarket
 	midi		66
 }
 
+Region LostLandsBackground
+{
+	Range	5120 2304 6160 4095
+	Realm	britannia
+	Guarded 0
+	midi        28
+	midi        27
+}
+
 Region Sailto
 {
 	Range	6848 1407 7148 1710
 	Guarded	0
 	Realm	britannia
 	midi	66
+}
+
+Region IlshenarBackground
+{
+	Range		0 0 2303 1599
+	Realm		ilshenar
+	midi        28
+	midi        27
 }
 
 Region VerLorReg
