--- a/099/pkg/megacliloc/pkg.cfg
+++ b/099/pkg/megacliloc/pkg.cfg
@@ -1,6 +1,6 @@
 Enabled		1
 Name		megacliloc
-Maintainer	MontuZ
-Email		MontuZ@Gmail.com
+Maintainer	Agata
+Email		natalia_buenota@hotmail.com
 CoreRequired	96
 Version		1.0
